Profile group badge overlapping fix (#1506)

--- a/packages/core/less/forum/UserCard.less
+++ b/packages/core/less/forum/UserCard.less
@@ -78,6 +78,7 @@
 
   &, > li {
     display: inline-block;
+    margin-right: 5px
   }
 }
 .UserCard-info {
